fix header alignment (blogspot)

--- a/blogspot/blogspot.css
+++ b/blogspot/blogspot.css
@@ -24,10 +24,10 @@ body {
 }
 
 .header {
-	width: 100%;
+	/* width: 100%; */
 	max-width: 680px;
 	position: fixed;
-	padding: 5px 0;
+    padding: 5px 5px 0 0;
 	top: 0;
 	z-index: 1;
 	background-color: var(--background);
